# Datahub

./: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
data_processor/: requirements.txt
data_processor/src/: main.py
data_retriever/: .env.example  requirements.txt
data_retriever/app/: main.py
data_retriever/app/api/: deps.py
data_retriever/app/api/v1/: datasource.py  document.py  retrieval.py  routes.py
data_retriever/app/core/: config.py
data_retriever/app/database/: base.py
data_retriever/app/database/models/: datasource.py  document.py
data_retriever/app/database/repositories/: base_repository.py  datasource_repository.py  document_repository.py
src/: __init__.py  container.py  main.py
src/applications/controllers/: __init__.py  base.py  datasource.py  document.py  search.py
src/applications/dtos/: datasource.py  document.py  search.py
src/applications/services/: __init__.py  datasource.py  document.py  search.py
src/applications/services/chunking/: __init__.py  base.py  doc_chunker.py  factory.py
src/configurations/: __init__.py  configurations.py
src/infrastructure/: __init__.py
src/infrastructure/clients/: __init__.py  aihub.py  identity.py
src/infrastructure/postgres/: __init__.py  client.py  models.py
src/infrastructure/postgres/migrations/: env.py
src/infrastructure/postgres/migrations/versions/: 2025-11-09-19-32_b719ac751cfa_create_datasource_document_chunk_384_.py
src/infrastructure/postgres/repositories/: __init__.py  base.py  chunk.py  datasource.py  document.py
src/utils/: logger.py
